[package]
name = "exp_viz"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/cov_viz_ds", rev = "21b6986606e141a312f352cd0101f370c6cc4964" }
# cov_viz_ds = { path = "../cov_viz_ds" }                # For working with a local copy during development
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
